--- a/latest/user-guide/install/index.html
+++ b/latest/user-guide/install/index.html
@@ -588,17 +588,17 @@
 <pre><code class="julia">Pkg.add(&quot;MXNet&quot;)
 </code></pre>
 
-<p>in the Julia REPL. Or to use the latest git version of MXNet.jl, use the following command instead</p>
+<p>In the Julia REPL. Or to use the latest git version of MXNet.jl, use the following command instead</p>
 <pre><code class="julia">Pkg.checkout(&quot;MXNet&quot;)
 </code></pre>
 
 <p>MXNet.jl is built on top of <a href="https://github.com/dmlc/mxnet">libmxnet</a>. Upon installation, Julia will try to automatically download and build libmxnet.</p>
-<p>There are three environment variables that change this behaviour. If you already have a pre-installed version of mxnet you can use <code>MXNET_HOME</code> to point the build-process in the right direction. If the automatic cuda detection fails you can also set <code>CUDA_HOME</code> to override the process. To control which version of libmxnet will be compiled, you can use the <code>MXNET_COMMIT</code> variable to point to either a version tag (e.g. <code>v0.10.0</code>), a branch name (e.g.  <code>master</code>) or a specific commit hash (e.g. <code>a0b1c2d3</code>).</p>
-<p>The libmxnet source is downloaded to <code>Pkg.dir("MXNet")/deps/src/mxnet</code>. The automatic build is using default configurations, with OpenCV disabled. If the compilation failed due to unresolved dependency, or if you want to customize the build, you can compile and install libmxnet manually. Please see below for more details.</p>
+<p>There are three environment variables that change this behaviour. If you already have a pre-installed version of mxnet you can use <code>MXNET_HOME</code> to point the build-process in the right direction. If the automatic cuda detection fails you can also set <code>CUDA_HOME</code> to override the process. To control which version of libmxnet will be compiled, you can use the <code>MXNET_COMMIT</code> variable to point to either a version tag (e.g. <code>v0.10.0</code>), a branch name (e.g. <code>master</code>) or a specific commit hash (e.g. <code>a0b1c2d3</code>).</p>
+<p>The libmxnet source is downloaded to <code>Pkg.dir("MXNet", "deps", "src", "mxnet")</code>. The automatic build is using default configurations, with OpenCV disabled. If the compilation failed due to unresolved dependency, or if you want to customize the build, you can compile and install libmxnet manually. Please see below for more details.</p>
 <p><a id='Manual-Compilation-1'></a></p>
 <h2 id="manual-compilation">Manual Compilation</h2>
-<p>It is possible to compile libmxnet separately and point MXNet.jl to a the existing library in case automatic compilation fails due to unresolved dependencies in an un-standard environment; Or when one want to work with a seperate, maybe customized libmxnet.</p>
-<p>To build libmxnet, please refer to <a href="http://mxnet.readthedocs.org/en/latest/build.html">the installation guide of libmxnet</a>. After successfully installing libmxnet, set the <code>MXNET_HOME</code> <em>environment variable</em> to the location of libmxnet. In other words, the compiled <code>libmxnet.so</code> should be found in <code>$MXNET_HOME/lib</code>.</p>
+<p>It is possible to compile libmxnet separately and point MXNet.jl to a existing library in case automatic compilation fails due to unresolved dependencies in an non-standard environment; Or when one want to work with a separate, maybe customized libmxnet.</p>
+<p>To build libmxnet, please refer to <a href="https://mxnet.incubator.apache.org/install/index.html">the installation guide of libmxnet</a>. After successfully installing libmxnet, set the <code>MXNET_HOME</code> <em>environment variable</em> to the location of libmxnet. In other words, the compiled <code>libmxnet.so</code> should be found in <code>$MXNET_HOME/lib</code>.</p>
 <blockquote>
 <p><strong>note</strong></p>
 <p>The constant <code>MXNET_HOME</code> is pre-compiled in MXNet.jl package cache. If you updated the environment variable after installing MXNet.jl, make sure to update the pre-compilation cache by <code>Base.compilecache("MXNet")</code>.</p>
@@ -607,7 +607,7 @@
 <p>Basically, MXNet.jl will search <code>libmxnet.so</code> or <code>libmxnet.dll</code> in the following paths (and in that order):</p>
 <ul>
 <li><code>$MXNET_HOME/lib</code>: customized libmxnet builds</li>
-<li><code>Pkg.dir("MXNet")/deps/usr/lib</code>: automatic builds</li>
+<li><code>Pkg.dir("MXNet", "deps", "usr", "lib")</code>: automatic builds</li>
 <li>Any system wide library search path</li>
 </ul>
 <p>Note that MXNet.jl can not load <code>libmxnet.so</code> even if it is on one of the paths above in case a library it depends upon is missing from the <code>LD_LIBRARY_PATH</code>. Thus, if you are going to compile to add CUDA, the path to the CUDA libraries will have to be added to <code>LD_LIBRARY_PATH</code>.</p>
