--- a/latest/user-guide/overview/index.html
+++ b/latest/user-guide/overview/index.html
@@ -760,12 +760,12 @@ julia&gt; mx.copy!(z, y)                 # Same as copy!(z, y)
 <pre><code class="julia-repl">julia&gt; using MXNet
 
 julia&gt; a = mx.ones(2, 3)
-2×3 mx.NDArray{Float32} @ CPU0:
+2×3 mx.NDArray{Float32,2} @ CPU0:
  1.0  1.0  1.0
  1.0  1.0  1.0
 
 julia&gt; b = mx.slice(a, 1:2)
-2×2 mx.NDArray{Float32} @ CPU0:
+2×2 mx.NDArray{Float32,2} @ CPU0:
  1.0  1.0
  1.0  1.0
 
@@ -773,7 +773,7 @@ julia&gt; b[:] = 2
 2
 
 julia&gt; a
-2×3 mx.NDArray{Float32} @ CPU0:
+2×3 mx.NDArray{Float32,2} @ CPU0:
  2.0  2.0  1.0
  2.0  2.0  1.0
 </code></pre>
@@ -784,32 +784,32 @@ julia&gt; a
 julia&gt; mx.srand(42)
 
 julia&gt; a = mx.empty(2, 3)
-2×3 mx.NDArray{Float32} @ CPU0:
- 6.01572f-36  1.79751f19  7.42688f-44
- 0.0          4.27246f-5  0.0
+2×3 mx.NDArray{Float32,2} @ CPU0:
+ 5.98637f-36  1.79751f19   1.69501f-7
+ 0.0          6.55564f-10  0.0
 
 julia&gt; a[:] = 0.5              # set all elements to a scalar
 0.5
 
 julia&gt; a[:] = rand(size(a))    # set contents with a Julia Array
 2×3 Array{Float64,2}:
- 0.299922  0.990436  0.205164
- 0.68401   0.743211  0.57121
+ 0.487584  0.272398  0.180968
+ 0.466513  0.234892  0.536696
 
 julia&gt; copy!(a, rand(size(a))) # set value by copying a Julia Array
-2×3 mx.NDArray{Float32} @ CPU0:
- 0.0718734  0.448414   0.585947
- 0.160162   0.0120673  0.233032
+2×3 mx.NDArray{Float32,2} @ CPU0:
+ 0.508528  0.709941  0.569877
+ 0.315908  0.073804  0.0843583
 
 julia&gt; b = mx.empty(size(a))
-2×3 mx.NDArray{Float32} @ CPU0:
- 2.97393f-36  7.9325f34   1.80067f-41
+2×3 mx.NDArray{Float32,2} @ CPU0:
+ 1.08567f-35  7.9325f34   1.19399f-7
  0.0          1.66905f-7  0.0
 
 julia&gt; b[:] = a                # copying and assignment between NDArrays
-2×3 mx.NDArray{Float32} @ CPU0:
- 0.0718734  0.448414   0.585947
- 0.160162   0.0120673  0.233032
+2×3 mx.NDArray{Float32,2} @ CPU0:
+ 0.508528  0.709941  0.569877
+ 0.315908  0.073804  0.0843583
 </code></pre>
 
 <p>Note due to the intrinsic design of the Julia language, a normal assignment</p>
@@ -820,32 +820,32 @@ julia&gt; b[:] = a                # copying and assignment between NDArrays
 <pre><code class="julia-repl">julia&gt; using MXNet
 
 julia&gt; a = mx.ones(2)
-2 mx.NDArray{Float32} @ CPU0:
+2 mx.NDArray{Float32,1} @ CPU0:
  1.0
  1.0
 
 julia&gt; r = a           # keep a reference to a
-2 mx.NDArray{Float32} @ CPU0:
+2 mx.NDArray{Float32,1} @ CPU0:
  1.0
  1.0
 
 julia&gt; b = mx.ones(2)
-2 mx.NDArray{Float32} @ CPU0:
+2 mx.NDArray{Float32,1} @ CPU0:
  1.0
  1.0
 
 julia&gt; a += b          # translates to a = a + b
-2 mx.NDArray{Float32} @ CPU0:
+2 mx.NDArray{Float32,1} @ CPU0:
  2.0
  2.0
 
 julia&gt; a
-2 mx.NDArray{Float32} @ CPU0:
+2 mx.NDArray{Float32,1} @ CPU0:
  2.0
  2.0
 
 julia&gt; r
-2 mx.NDArray{Float32} @ CPU0:
+2 mx.NDArray{Float32,1} @ CPU0:
  1.0
  1.0
 </code></pre>
@@ -853,12 +853,12 @@ julia&gt; r
 <p>As we can see, <code>a</code> has expected value, but instead of inplace updating, a new <code>NDArray</code> is created and <code>a</code> is set to point to this new object. If we look at <code>r</code>, which still reference to the old <code>a</code>, its content has not changed. There is currently no way in Julia to overload the operators like <code>+=</code> to get customized behavior.</p>
 <p>Instead, you will need to write <code>a[:] = a + b</code>, or if you want <em>real</em> inplace <code>+=</code> operation, MXNet.jl provides a simple macro <code>@mx.inplace</code>:</p>
 <pre><code class="julia-repl">julia&gt; @mx.inplace a += b
-2 mx.NDArray{Float32} @ CPU0:
+2 mx.NDArray{Float32,1} @ CPU0:
  3.0
  3.0
 
 julia&gt; macroexpand(:(@mx.inplace a += b))
-2 mx.NDArray{Float32} @ CPU0:
+2 mx.NDArray{Float32,1} @ CPU0:
  4.0
  4.0
 </code></pre>
@@ -950,7 +950,7 @@ mx.pull!(kv, key, a) # pull value into a
 a
 </code></pre>
 
-<pre><code>2×3 mx.NDArray{Float32} @ CPU0:
+<pre><code>2×3 mx.NDArray{Float32,2} @ CPU0:
  2.0  2.0  2.0
  2.0  2.0  2.0
 </code></pre>
@@ -1139,13 +1139,13 @@ julia&gt; C = A .* B
 MXNet.mx.SymbolicNode _mul0
 
 julia&gt; a = mx.ones(3) * 4
-3 mx.NDArray{Float32} @ CPU0:
+3 mx.NDArray{Float32,1} @ CPU0:
  4.0
  4.0
  4.0
 
 julia&gt; b = mx.ones(3) * 2
-3 mx.NDArray{Float32} @ CPU0:
+3 mx.NDArray{Float32,1} @ CPU0:
  2.0
  2.0
  2.0
@@ -1153,11 +1153,11 @@ julia&gt; b = mx.ones(3) * 2
 julia&gt; c_exec = mx.bind(C, context=mx.cpu(), args=Dict(:A =&gt; a, :B =&gt; b));
 
 julia&gt; mx.forward(c_exec)
-1-element Array{MXNet.mx.NDArray,1}:
+1-element Array{MXNet.mx.NDArray{Float32,1},1}:
  NDArray Float32[8.0, 8.0, 8.0]
 
 julia&gt; c_exec.outputs[1]
-3 mx.NDArray{Float32} @ CPU0:
+3 mx.NDArray{Float32,1} @ CPU0:
  8.0
  8.0
  8.0
