--- a/latest/index.html
+++ b/latest/index.html
@@ -646,7 +646,12 @@
 <h2 id="api-documentation">API Documentation</h2>
 <ul>
 <li><a href="api/context/#Context-1">Context</a></li>
-<li><a href="api/ndarray/#NDArray-API-1">NDArray API</a></li>
+<li><a href="api/ndarray/#NDArray-API-1">NDArray API</a><ul>
+<li><a href="api/ndarray/#Arithmetic-Operations-1">Arithmetic Operations</a></li>
+<li><a href="api/ndarray/#Trigonometric-functions-1">Trigonometric functions</a></li>
+<li><a href="api/ndarray/#Reference-1">Reference</a></li>
+</ul>
+</li>
 <li><a href="api/symbolic-node/#Symbolic-API-1">Symbolic API</a></li>
 <li><a href="api/model/#Model-1">Model</a></li>
 <li><a href="api/metric/#Evaluation-Metrics-1">Evaluation Metrics</a></li>
