build based on d921225

--- a/latest/index.html
+++ b/latest/index.html
@@ -648,7 +648,8 @@
 <li><a href="api/context/#Context-1">Context</a></li>
 <li><a href="api/ndarray/#NDArray-API-1">NDArray API</a><ul>
 <li><a href="api/ndarray/#Arithmetic-Operations-1">Arithmetic Operations</a></li>
-<li><a href="api/ndarray/#Trigonometric-functions-1">Trigonometric functions</a></li>
+<li><a href="api/ndarray/#Trigonometric-Functions-1">Trigonometric Functions</a></li>
+<li><a href="api/ndarray/#Hyperbolic-Functions-1">Hyperbolic Functions</a></li>
 <li><a href="api/ndarray/#Reference-1">Reference</a></li>
 </ul>
 </li>
