--- a/latest/tutorial/mnist/index.html
+++ b/latest/tutorial/mnist/index.html
@@ -756,21 +756,16 @@ INFO:       :accuracy = 0.9915
 
 <p>The following code shows a stupid way of getting all the labels from the data provider, and compute the prediction accuracy manually:</p>
 <pre><code class="julia"># collect all labels from eval data
-labels = Array[]
-for batch in eval_provider
-  push!(labels, copy(mx.get_label(batch)))
-end
-labels = cat(1, labels...)
+labels = reduce(
+  vcat,
+  copy(mx.get(eval_provider, batch, :softmax_label)) for batch ∈ eval_provider)
+# labels are 0...9
+labels .= labels .+ 1
 
 # Now we use compute the accuracy
-correct = 0
-for i = 1:length(labels)
-  # labels are 0...9
-  if indmax(probs[:,i]) == labels[i]+1
-    correct += 1
-  end
-end
-println(mx.format(&quot;Accuracy on eval set: {1:.2f}%&quot;, 100correct/length(labels)))
+pred = map(i -&gt; indmax(probs[1:10, i]), 1:size(probs, 2))
+correct = sum(pred .== labels)
+@printf &quot;Accuracy on eval set: %.2f%%\n&quot; 100correct/length(labels)
 </code></pre>
 
 <p>Alternatively, when the dataset is huge, one can provide a callback to <code>mx.predict</code>, then the callback function will be invoked with the outputs of each mini-batch. The callback could, for example, write the data to disk for future inspection. In this case, no value is returned from <code>mx.predict</code>. See also predict.</p>
