--- a/latest/tutorial/mnist/index.html
+++ b/latest/tutorial/mnist/index.html
@@ -656,8 +656,8 @@ train_provider, eval_provider = get_mnist_providers(batch_size)
 </code></pre>
 
 <p>You can use a <code>mx.gpu()</code> or if a list of devices (e.g. <code>[mx.gpu(0), mx.gpu(1)]</code>) is provided, data-parallelization will be used automatically. But for this tiny example, using a GPU device might not help.</p>
-<p>The last thing we need to specify is the optimization algorithm (a.k.a. <em>optimizer</em>) to use. We use the basic SGD with a fixed learning rate 0.1 and momentum 0.9:</p>
-<pre><code class="julia">optimizer = mx.SGD(lr=0.1, momentum=0.9, weight_decay=0.00001)
+<p>The last thing we need to specify is the optimization algorithm (a.k.a. <em>optimizer</em>) to use. We use the basic SGD with a fixed learning rate 0.1 , momentum 0.9 and weight decay 0.00001:</p>
+<pre><code class="julia">optimizer = mx.SGD(η=0.1, μ=0.9, λ=0.00001)
 </code></pre>
 
 <p>Now we can do the training. Here the <code>n_epoch</code> parameter specifies that we want to train for 20 epochs. We also supply a <code>eval_data</code> to monitor validation accuracy on the validation set.</p>
@@ -726,7 +726,7 @@ train_provider, eval_provider = get_mnist_providers(batch_size; flat=false)
 model = mx.FeedForward(lenet, context=mx.gpu())
 
 # optimizer
-optimizer = mx.SGD(lr=0.05, momentum=0.9, weight_decay=0.00001)
+optimizer = mx.SGD(η=0.05, μ=0.9, λ=0.00001)
 
 # fit parameters
 mx.fit(model, optimizer, train_provider, n_epoch=20, eval_data=eval_provider)
